[leancloud]初步版本，可以拉取后台数据

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">doctor</string>
     <string name="order_training">"有序练习"</string>
     <string name="ramdon_training">"随机练习"</string>
-
+    <string name="special_subject_training">"专项练习"</string>
+    <string name="notdon_training">"未做题"</string>
+    
 </resources>
