--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="ramdon_training">"随机练习"</string>
     <string name="special_subject_training">"专项练习"</string>
     <string name="notdon_training">"未做题"</string>
-    
+    <string name="function_test">"测试"</string>
+        
     <!-- 题目页 -->
     <string name="question_analysis_detail">"试题详解"</string>
     <string name="question_analysis_key">"考点"</string>
