[多选题中确认答案的样式]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,8 @@
     
     <!-- 题目页 -->
     <string name="question_analysis_detail">"试题详解"</string>
-    <string name="question_multi_confirm">"答案确认"</string>
+    <string name="question_multi_confirm">"确认答案"</string>
+    <string name="question_remind_multi_select">"至少选择两个答案"</string>
     <string name="question_analysis_key">"考点"</string>
     <string name="examing_menu_item">考试模式</string>
     <string name="learning_menu_item">学习模式</string>
